Fix: color styles updates (#3410)
* Updates for color in Dark Mode: info alert background, selected Safe Account in the drawer. Warning color styles updates

* fix: Update color palette and generate vars.css

* fix: Color in conflicting transactions

---------

Co-authored-by: Usame Algan <usame@safe.global>

--- a/src/styles/vars.css
+++ b/src/styles/vars.css
@@ -26,10 +26,10 @@
   --color-info-main: #5fddff;
   --color-info-light: #b7f0ff;
   --color-info-background: #effcff;
-  --color-warning-dark: #cd674e;
+  --color-warning-dark: #c04c32;
   --color-warning-main: #ff8061;
-  --color-warning-light: #ffb7a6;
-  --color-warning-background: #fff0ed;
+  --color-warning-light: #ffbc9f;
+  --color-warning-background: #fff1e0;
   --color-background-default: #f4f4f4;
   --color-background-main: #f4f4f4;
   --color-background-paper: #ffffff;
@@ -62,7 +62,7 @@
   --color-secondary-dark: #636669;
   --color-secondary-main: #ffffff;
   --color-secondary-light: #12ff80;
-  --color-secondary-background: #303033;
+  --color-secondary-background: #1b2a22;
   --color-border-main: #636669;
   --color-border-light: #303033;
   --color-border-background: #121312;
@@ -78,10 +78,10 @@
   --color-info-main: #5fddff;
   --color-info-light: #b7f0ff;
   --color-info-background: #19252c;
-  --color-warning-dark: #cd674e;
+  --color-warning-dark: #c04c32;
   --color-warning-main: #ff8061;
-  --color-warning-light: #ffb7a6;
-  --color-warning-background: #2f2318;
+  --color-warning-light: #ffbc9f;
+  --color-warning-background: #fff1e0;
   --color-background-default: #121312;
   --color-background-main: #121312;
   --color-background-paper: #1c1c1c;
@@ -104,7 +104,7 @@
     --color-secondary-dark: #636669;
     --color-secondary-main: #ffffff;
     --color-secondary-light: #12ff80;
-    --color-secondary-background: #303033;
+    --color-secondary-background: #1b2a22;
     --color-border-main: #636669;
     --color-border-light: #303033;
     --color-border-background: #121312;
@@ -120,10 +120,10 @@
     --color-info-main: #5fddff;
     --color-info-light: #b7f0ff;
     --color-info-background: #19252c;
-    --color-warning-dark: #cd674e;
+    --color-warning-dark: #c04c32;
     --color-warning-main: #ff8061;
-    --color-warning-light: #ffb7a6;
-    --color-warning-background: #2f2318;
+    --color-warning-light: #ffbc9f;
+    --color-warning-background: #fff1e0;
     --color-background-default: #121312;
     --color-background-main: #121312;
     --color-background-paper: #1c1c1c;
