fix: Revert warning.background color in dark mode

--- a/src/styles/vars.css
+++ b/src/styles/vars.css
@@ -81,7 +81,7 @@
   --color-warning-dark: #c04c32;
   --color-warning-main: #ff8061;
   --color-warning-light: #ffbc9f;
-  --color-warning-background: #fff1e0;
+  --color-warning-background: #2f2318;
   --color-background-default: #121312;
   --color-background-main: #121312;
   --color-background-paper: #1c1c1c;
@@ -123,7 +123,7 @@
     --color-warning-dark: #c04c32;
     --color-warning-main: #ff8061;
     --color-warning-light: #ffbc9f;
-    --color-warning-background: #fff1e0;
+    --color-warning-background: #2f2318;
     --color-background-default: #121312;
     --color-background-main: #121312;
     --color-background-paper: #1c1c1c;
