--- a/src/components/transactions/GroupedTxListItems/styles.module.css
+++ b/src/components/transactions/GroupedTxListItems/styles.module.css
@@ -1,4 +1,5 @@
 .container {
+  position: relative;
   padding: var(--space-2);
   border: 1px solid var(--color-warning-light);
   display: grid;
@@ -33,7 +34,9 @@
   border-bottom: 1px solid var(--color-border-light);
   border-radius: 0 0 0 4px;
   height: calc(100% - 29px);
-  margin-top: -30px;
+  width: 100%;
+  position: absolute;
+  top: 0;
   margin-left: 9px;
 }
 
