--- a/src/components/welcome/MyAccounts/styles.module.css
+++ b/src/components/welcome/MyAccounts/styles.module.css
@@ -97,6 +97,16 @@
   color: var(--color-text-secondary);
 }
 
+.chip {
+  border-radius: 4px;
+  background-color: var(--color-warning-background);
+  margin-top: 4px;
+}
+
+.pendingAccount {
+  background-color: var(--color-info-background);
+}
+
 @media (max-width: 899.95px) {
   .container {
     width: auto;
