--- a/src/components/common/Header/styles.module.css
+++ b/src/components/common/Header/styles.module.css
@@ -37,10 +37,10 @@
 }
 
 .logo svg {
-  width: auto;
+  width: 120px;
   display: block;
   color: var(--color-logo-main);
-  height: 20px;
+  height: 80px;
 }
 
 .logo {
