update web style

--- a/src/components/welcome/styles.module.css
+++ b/src/components/welcome/styles.module.css
@@ -74,7 +74,7 @@
 }
 
 .content {
-  background: linear-gradient(-90deg, #10ff84, #5fddff);
+  background: linear-gradient(-90deg, #f8ef04, #fa7d00);
   background-size: 200% 200%;
   animation: gradient 15s ease infinite;
   border-radius: 6px;
@@ -119,9 +119,11 @@
   0% {
     background-position: 0 50%;
   }
+
   50% {
     background-position: 100% 50%;
   }
+
   100% {
     background-position: 0 50%;
   }
@@ -131,6 +133,7 @@
   from {
     transform: translateX(0);
   }
+
   to {
     transform: translateX(calc(-100% - var(--space-6)));
   }
