fix: Use info light color for chip background

--- a/src/components/welcome/MyAccounts/styles.module.css
+++ b/src/components/welcome/MyAccounts/styles.module.css
@@ -104,7 +104,11 @@
 }
 
 .pendingAccount {
-  background-color: var(--color-info-background);
+  background-color: var(--color-info-light);
+}
+
+.pendingLoopIcon {
+  color: var(--color-info-dark) !important;
 }
 
 @media (max-width: 899.95px) {
