--- a/src/components/transactions/TxDetails/styles.module.css
+++ b/src/components/transactions/TxDetails/styles.module.css
@@ -26,8 +26,9 @@
 .txData,
 .txSummary,
 .advancedDetails,
-.txModule {
-  padding: 20px 24px;
+.txModule,
+.swapOrder {
+  padding: var(--space-2);
 }
 
 .txData {
@@ -52,7 +53,8 @@
   padding: 0 var(--space-1);
 }
 
-.multiSend {
+.multiSend,
+.swapOrder {
   border-top: 1px solid var(--color-border-light);
 }
 
