--- a/src/components/dashboard/ActivityRewardsSection/styles.module.css
+++ b/src/components/dashboard/ActivityRewardsSection/styles.module.css
@@ -57,7 +57,7 @@
 }
 
 .header {
-  max-width: 350px;
+  padding-right: var(--space-8);
 }
 
 .steps {
@@ -102,7 +102,7 @@
 
 @media (max-width: 899.99px) {
   .header {
-    max-width: 100%;
+    padding: 0;
   }
 
   .widgetWrapper {
