--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,6 +14,10 @@ main {
   width: 100%;
 }
 
+main.swapWrapper {
+  height: calc(100vh - 48px);
+}
+
 a {
   color: inherit;
   text-decoration: none;
