--- a/src/features/swap/components/BlockedAddress/styles.module.css
+++ b/src/features/swap/components/BlockedAddress/styles.module.css
@@ -1,9 +1,8 @@
 .container {
-  max-width: 500px;
-  margin: auto;
-  /* display: flex;
-  flex-direction: column;
-  align-items: center; */
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .iconCircle {
