fix: incorrent column names for actions and status

--- a/src/components/transactions/TxSummary/styles.module.css
+++ b/src/components/transactions/TxSummary/styles.module.css
@@ -5,8 +5,8 @@
   --grid-date: minmax(200px, 3fr);
   --grid-confirmations: minmax(120px, 1fr);
 
-  --grid-actions: minmax(120px, 1fr);
-  --grid-status: minmax(100px, 1fr);
+  --grid-status: minmax(120px, 1fr);
+  --grid-actions: minmax(100px, 1fr);
 
   width: 100%;
   display: grid;
@@ -15,8 +15,7 @@
   white-space: nowrap;
   grid-template-columns:
     var(--grid-nonce) var(--grid-type) var(--grid-info) var(--grid-date) var(--grid-confirmations)
-    var(--grid-actions)
-    var(--grid-status);
+    var(--grid-status) var(--grid-actions);
   grid-template-areas: 'nonce type info date confirmations  status actions';
 }
 
@@ -30,9 +29,9 @@
 }
 
 .gridContainer.grouped {
-  grid-template-columns:
-    var(--grid-type) var(--grid-info) var(--grid-date) var(--grid-confirmations) var(--grid-actions)
-    var(--grid-status);
+  grid-template-columns: var(--grid-type) var(--grid-info) var(--grid-date) var(--grid-confirmations) var(--grid-status) var(
+      --grid-actions
+    );
   grid-template-areas: 'type info date confirmations status actions';
 }
 
