align grouped columns with non grouped columns

--- a/src/components/transactions/TxSummary/styles.module.css
+++ b/src/components/transactions/TxSummary/styles.module.css
@@ -35,6 +35,11 @@
   grid-template-areas: 'type info date confirmations status actions';
 }
 
+.gridContainer.isBulkGroup {
+  grid-template-columns: minmax(200px, 3fr) var(--grid-info) var(--grid-date) var(--grid-status);
+  grid-template-areas: 'type info date status';
+}
+
 .gridContainer.untrusted {
   opacity: 0.4;
 }
