--- a/src/components/transactions/TxSummary/styles.module.css
+++ b/src/components/transactions/TxSummary/styles.module.css
@@ -35,7 +35,7 @@
   grid-template-areas: 'type info date confirmations status actions';
 }
 
-.gridContainer.isBulkGroup {
+.gridContainer.bulkGroup {
   grid-template-columns: minmax(200px, 3fr) var(--grid-info) var(--grid-date) var(--grid-status);
   grid-template-areas: 'type info date status';
 }
