--- a/src/components/transactions/TxSummary/styles.module.css
+++ b/src/components/transactions/TxSummary/styles.module.css
@@ -36,8 +36,13 @@
 }
 
 .gridContainer.bulkGroup {
-  grid-template-columns: minmax(200px, 3fr) var(--grid-info) var(--grid-date) var(--grid-status);
+  grid-template-columns: var(--grid-type) var(--grid-info) var(--grid-date) var(--grid-status);
   grid-template-areas: 'type info date status';
+}
+
+.gridContainer.bulkGroup.untrusted {
+  grid-template-columns: var(--grid-nonce) minmax(200px, 2.4fr) var(--grid-info) var(--grid-date) var(--grid-status);
+  grid-template-areas: 'nonce type info date status';
 }
 
 .gridContainer.untrusted {
