--- a/src/components/safe-apps/NativeFeatureCard/styles.module.css
+++ b/src/components/safe-apps/NativeFeatureCard/styles.module.css
@@ -1,6 +1,7 @@
 .safeAppContainer {
   transition: background-color 0.3s ease-in-out, border 0.3s ease-in-out;
   border: 1px solid transparent;
+  height: 100%;
 }
 
 .safeAppContainer:hover {
@@ -45,6 +46,4 @@
 
 .buttons {
   padding-top: var(--space-2);
-  /* display: flex;
-  justify-content: space-between; */
 }
