--- a/src/components/safe-apps/NativeFeatureCard/styles.module.css
+++ b/src/components/safe-apps/NativeFeatureCard/styles.module.css
@@ -1,23 +1,23 @@
-.safeAppContainer {
+.container {
   transition: background-color 0.3s ease-in-out, border 0.3s ease-in-out;
   border: 1px solid transparent;
   height: 100%;
 }
 
-.safeAppContainer:hover {
+.container:hover {
   background-color: var(--color-background-light);
   border: 1px solid var(--color-secondary-light);
 }
 
-.safeAppHeader {
-  padding: var(--space-2) var(--space-2) 0 var(--space-2) !important;
+.header {
+  padding: var(--space-3) var(--space-2) var(--space-1) var(--space-2);
 }
 
-.safeAppContent {
+.content {
   padding: var(--space-2);
 }
 
-.safeAppIconContainer {
+.iconContainer {
   position: relative;
   background: var(--color-secondary-light);
   border-radius: 50%;
@@ -25,7 +25,7 @@
   padding: var(--space-1);
 }
 
-.safeAppTitle {
+.title {
   line-height: 175%;
   margin: 0;
 
@@ -36,7 +36,7 @@
   text-overflow: ellipsis;
 }
 
-.safeAppDescription {
+.description {
   /* Truncate Safe App Description (3 lines) */
   display: -webkit-box;
   -webkit-line-clamp: 3;
