--- a/src/components/transactions/TxSummary/styles.module.css
+++ b/src/components/transactions/TxSummary/styles.module.css
@@ -16,7 +16,7 @@
   grid-template-columns:
     var(--grid-nonce) var(--grid-type) var(--grid-info) var(--grid-date) var(--grid-confirmations)
     var(--grid-status) var(--grid-actions);
-  grid-template-areas: 'nonce type info date confirmations  status actions';
+  grid-template-areas: 'nonce type info date confirmations status actions';
 }
 
 .gridContainer > * {
@@ -33,6 +33,11 @@
       --grid-actions
     );
   grid-template-areas: 'type info date confirmations status actions';
+}
+
+.gridContainer.message {
+  grid-template-columns: var(--grid-type) var(--grid-info) var(--grid-date) var(--grid-status) var(--grid-confirmations);
+  grid-template-areas: 'type info date status confirmations';
 }
 
 .gridContainer.untrusted {
