fix: display swap button in top assets only on hover

--- a/src/components/dashboard/PendingTxs/styles.module.css
+++ b/src/components/dashboard/PendingTxs/styles.module.css
@@ -11,9 +11,17 @@
   min-height: 50px;
 }
 
+.container button {
+  opacity: 0;
+}
+
 .container:hover {
   background-color: var(--color-background-light);
   border-color: var(--color-secondary-light);
+}
+
+.container:hover button {
+  opacity: 1;
 }
 
 .list {
