--- a/src/components/transactions/TxDetails/styles.module.css
+++ b/src/components/transactions/TxDetails/styles.module.css
@@ -11,14 +11,18 @@
   position: relative;
 }
 
+.details.noSigners {
+  width: 100%;
+}
+
+.txSigners.noSigners {
+  display: none;
+}
+
 .shareLink {
   position: absolute;
   right: 16px;
   top: 16px;
-}
-
-.details .noSigners {
-  width: 100%;
 }
 
 .loading,
