Make warning symbold full opacity, remove tooltip for imitation txs

--- a/src/components/transactions/TxSummary/styles.module.css
+++ b/src/components/transactions/TxSummary/styles.module.css
@@ -50,7 +50,7 @@
   grid-template-areas: 'type info date status confirmations';
 }
 
-.gridContainer.untrusted {
+.gridContainer.untrusted :not(:first-child):is(div) {
   opacity: 0.4;
 }
 
