--- a/src/components/transactions/TxSummary/styles.module.css
+++ b/src/components/transactions/TxSummary/styles.module.css
@@ -28,21 +28,11 @@
   grid-template-areas: 'nonce type info date status';
 }
 
-.gridContainer.conflictGroup {
+.gridContainer.grouped {
   grid-template-columns: var(--grid-type) var(--grid-info) var(--grid-date) var(--grid-confirmations) var(--grid-status) var(
       --grid-actions
     );
   grid-template-areas: 'type info date confirmations status actions';
-}
-
-.gridContainer.bulkGroup {
-  grid-template-columns: var(--grid-type) var(--grid-info) var(--grid-date) var(--grid-status);
-  grid-template-areas: 'type info date status';
-}
-
-.gridContainer.bulkGroup.untrusted {
-  grid-template-columns: var(--grid-nonce) minmax(200px, 2.4fr) var(--grid-info) var(--grid-date) var(--grid-status);
-  grid-template-areas: 'nonce type info date status';
 }
 
 .gridContainer.message {
