--- a/src/features/swap/components/SwapOrderConfirmationView/styles.module.css
+++ b/src/features/swap/components/SwapOrderConfirmationView/styles.module.css
@@ -1,3 +1,20 @@
 .tableWrapper > div > * {
   margin: 6px 0;
 }
+
+.partsBlock {
+  border: 1px solid var(--color-border-light);
+  border-radius: 4px;
+  padding: calc(var(--space-1) - 6px) var(--space-2);
+}
+
+.partsBlockTitle {
+  padding: var(--space-1) 0;
+}
+
+.numberOfPartsLabel {
+  display: inline-block;
+  border-radius: 4px;
+  padding: 2px 8px;
+  background-color: var(--color-border-background);
+}
