--- a/src/components/common/Table/styles.module.css
+++ b/src/components/common/Table/styles.module.css
@@ -6,6 +6,16 @@
   max-width: 900px;
 }
 
+.gridEmptyRow {
+  display: grid;
+  grid-template-columns: 35% auto;
+  gap: var(--space-1);
+  justify-content: flex-start;
+  max-width: 900px;
+  margin-top: var(--space-1);
+  margin-bottom: var(--space-1);
+  border-top: 1px solid var(--color-border-light);
+}
 .title {
   color: var(--color-primary-light);
   font-weight: 400;
