--- a/src/features/swap/components/SwapOrderConfirmationView/styles.module.css
+++ b/src/features/swap/components/SwapOrderConfirmationView/styles.module.css
@@ -1,11 +1,11 @@
-.tableWrapper > div > * {
-  margin: 6px 0;
+.amount {
+  margin-bottom: var(--space-1);
 }
-
 .partsBlock {
   border: 1px solid var(--color-border-light);
   border-radius: 4px;
   padding: calc(var(--space-1) - 6px) var(--space-2);
+  margin-top: var(--space-1);
 }
 
 .partsBlockTitle {
