--- a/src/components/common/Table/styles.module.css
+++ b/src/components/common/Table/styles.module.css
@@ -5,6 +5,11 @@
   justify-content: flex-start;
   max-width: 900px;
   overflow-x: auto;
+  margin-bottom: var(--space-1);
+}
+
+.gridRow:last-of-type {
+  margin-bottom: 0;
 }
 
 .gridEmptyRow {
@@ -17,6 +22,7 @@
   margin-bottom: var(--space-1);
   border-top: 1px solid var(--color-border-light);
 }
+
 .title {
   color: var(--color-primary-light);
   font-weight: 400;
