Feat: add safe logo to header bar on mobile
Remove name from chain indicator select for smaller screens to make room
Make wallet overvie collapse for smaller screens than before to make room

--- a/src/components/common/ChainIndicator/styles.module.css
+++ b/src/components/common/ChainIndicator/styles.module.css
@@ -30,6 +30,12 @@
   .indicator {
     min-width: 35px;
   }
+  .responsive {
+    min-width: 0;
+  }
+  .responsive .name {
+    display: none;
+  }
 }
 
 @container my-accounts-container (max-width: 500px) {
@@ -40,3 +46,12 @@
     display: none;
   }
 }
+
+/* @media (max-width: 899.95pxpx) {
+  .responsive {
+    min-width: 0;
+  }
+  .responsive .name {
+    display: none;
+  }
+} */
