--- a/src/components/common/NetworkSelector/styles.module.css
+++ b/src/components/common/NetworkSelector/styles.module.css
@@ -28,9 +28,9 @@
   pointer-events: none;
 }
 
-.menuItem {
-  padding-top: var(--space-1);
-  padding-bottom: var(--space-1);
+.select :global .MuiMenuItem-root {
+  padding: 0;
+  pointer-events: none;
 }
 
 .listSubHeader {
@@ -52,4 +52,8 @@
   display: flex;
   align-items: center;
   gap: var(--space-1);
+}
+
+div[aria-expanded='false'] .name {
+  display: hidden;
 }
