--- a/src/components/dashboard/ActivityRewardsSection/styles.module.css
+++ b/src/components/dashboard/ActivityRewardsSection/styles.module.css
@@ -67,10 +67,11 @@
 
 .links {
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   align-items: center;
   margin-top: var(--space-3);
   text-wrap: nowrap;
+  width: 100%;
 }
 
 @media (max-width: 899.99px) {
