Fix: Update the border in the dialogs and remove border for swap order history (#3893)

--- a/src/components/transactions/TxDetails/styles.module.css
+++ b/src/components/transactions/TxDetails/styles.module.css
@@ -58,8 +58,7 @@
   padding: 0 var(--space-1);
 }
 
-.multiSend,
-.swapOrder {
+.multiSend {
   border-top: 1px solid var(--color-border-light);
 }
 
