--- a/src/components/transactions/TxDetails/styles.module.css
+++ b/src/components/transactions/TxDetails/styles.module.css
@@ -35,6 +35,7 @@
   padding: var(--space-2);
   padding-top: var(--space-3);
 }
+
 .txData,
 .swapOrder {
   border-bottom: 1px solid var(--color-border-light);
@@ -58,8 +59,9 @@
   padding: 0 var(--space-1);
 }
 
-.multiSend {
-  border-top: 1px solid var(--color-border-light);
+.multiSend,
+.swapOrder {
+  border-bottom: 1px solid var(--color-border-light);
 }
 
 .buttons {
