fix: creation overview network styles

--- a/src/components/new-safe/create/OverviewWidget/styles.module.css
+++ b/src/components/new-safe/create/OverviewWidget/styles.module.css
@@ -20,3 +20,17 @@
   align-items: center;
   border-top: 1px solid var(--color-border-light);
 }
+
+.networks {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 12px;
+}
+
+.networks img {
+  margin-left: -12px;
+  background-color: var(--color-background-main);
+  padding: 1px;
+
+  border-radius: 12px;
+}
