--- a/src/components/transactions/TxDetails/styles.module.css
+++ b/src/components/transactions/TxDetails/styles.module.css
@@ -22,22 +22,11 @@
 .txData,
 .txSummary,
 .advancedDetails,
-.txModule,
-.swapOrder {
+.txModule {
   padding: var(--space-2);
 }
 
-.swapOrderTransfer {
-  border-top: 1px solid var(--color-border-light);
-  margin-top: var(--space-2);
-  margin-left: calc(var(--space-2) * -1);
-  margin-right: calc(var(--space-2) * -1);
-  padding: var(--space-2);
-  padding-top: var(--space-3);
-}
-
-.txData,
-.swapOrder {
+.txData {
   border-bottom: 1px solid var(--color-border-light);
 }
 
@@ -59,8 +48,7 @@
   padding: 0 var(--space-1);
 }
 
-.multiSend,
-.swapOrder {
+.multiSend {
   border-bottom: 1px solid var(--color-border-light);
 }
 
