--- a/src/components/common/NetworkSelector/styles.module.css
+++ b/src/components/common/NetworkSelector/styles.module.css
@@ -37,9 +37,9 @@
   font-size: 11px;
   font-weight: bold;
   line-height: 32px;
-  background-color: var(--color-background-main);
   text-align: center;
   letter-spacing: 1px;
+  width: 100%;
 }
 
 [data-theme='dark'] .undeployedNetworksHeader {
@@ -50,6 +50,8 @@
   background-color: var(--color-background-main);
   text-align: center;
   line-height: 32px;
+  padding: 0;
+  margin-top: var(--space-1);
 }
 
 .plusIcon {
