--- a/src/components/welcome/MyAccounts/styles.module.css
+++ b/src/components/welcome/MyAccounts/styles.module.css
@@ -81,31 +81,8 @@
 .safeLink {
   display: grid;
   padding: var(--space-2) var(--space-1) var(--space-2) var(--space-2);
-  grid-template-columns: auto 3fr 2fr auto;
+  grid-template-columns: 60px 3fr 3fr 2fr;
   align-items: center;
-}
-
-@media (max-width: 599.95px) {
-  .safeLink {
-    grid-template-columns: auto 1fr auto;
-    grid-template-areas:
-      'a b d'
-      'a c d';
-  }
-
-  .safeLink :nth-child(1) {
-    grid-area: a;
-  }
-  .safeLink :nth-child(2) {
-    grid-area: b;
-  }
-  .safeLink :nth-child(3) {
-    grid-area: c;
-    text-align: left;
-  }
-  .safeLink :nth-child(4) {
-    grid-area: d;
-  }
 }
 
 .safeName,
@@ -164,6 +141,23 @@
   color: var(--color-info-dark) !important;
 }
 
+.multiChains {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.multiChains > span {
+  margin-left: -5px;
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  outline: 2px solid var(--color-background-paper);
+}
+
+.chainIndicator {
+  justify-content: flex-end;
+}
+
 @media (max-width: 899.95px) {
   .container {
     width: auto;
@@ -171,6 +165,33 @@
 
   .safeLink {
     padding-right: 0;
+  }
+}
+
+@media (max-width: 599.95px) {
+  .safeLink {
+    grid-template-columns: auto 1fr auto;
+    grid-template-areas:
+      'a b d'
+      'a c d';
+  }
+
+  .safeLink :nth-child(1) {
+    grid-area: a;
+  }
+  .safeLink :nth-child(2) {
+    grid-area: b;
+  }
+  .safeLink :nth-child(3) {
+    grid-area: c;
+    text-align: left;
+  }
+  .safeLink :nth-child(4) {
+    grid-area: d;
+  }
+
+  .multiChains {
+    justify-content: flex-start;
   }
 }
 
