--- a/src/features/multichain/components/NetworkLogosList/styles.module.css
+++ b/src/features/multichain/components/NetworkLogosList/styles.module.css
@@ -1,12 +1,24 @@
 .networks {
   display: flex;
   flex-wrap: wrap;
-  margin-left: 12px;
+  margin-left: 6px;
 }
 
 .networks img {
-  margin-left: -12px;
-  background-color: var(--color-background-main);
-  padding: 1px;
-  border-radius: 12px;
+  margin-left: -6px;
+  outline: 2px solid var(--color-background-paper);
+  border-radius: 50%;
+}
+
+.moreChainsIndicator {
+  margin-left: -5px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background-color: var(--color-border-light);
+  outline: 2px solid var(--color-background-paper);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
 }
