--- a/src/components/welcome/MyAccounts/styles.module.css
+++ b/src/components/welcome/MyAccounts/styles.module.css
@@ -100,7 +100,7 @@
 }
 
 .listHeader {
-  padding-bottom: var(--space-1);
+  /* padding-bottom: var(--space-1); */
   display: flex;
   justify-content: space-between;
 }
@@ -173,6 +173,27 @@
   .safeLink {
     padding-right: 0;
   }
+}
+
+.safeList :global .MuiAccordionDetails-root {
+  padding: 0;
+}
+.safeList :global .MuiAccordion-root {
+  padding: 0;
+  border: none;
+}
+
+.safeList :global .MuiAccordionSummary-root {
+  background: white !important;
+  padding-left: 0;
+  min-height: 0;
+  justify-content: left;
+  vertical-align: middle;
+}
+
+.safeList :global .MuiAccordionSummary-content {
+  margin: 0;
+  /* flex-grow: 0; */
 }
 
 @media (max-width: 599.95px) {
