fix: pinning behaviour of multichain safes

--- a/src/components/welcome/MyAccounts/styles.module.css
+++ b/src/components/welcome/MyAccounts/styles.module.css
@@ -100,13 +100,8 @@
 }
 
 .listHeader {
-  /* padding-bottom: var(--space-1); */
   display: flex;
-  justify-content: space-between;
-}
-
-.listTitle {
-  margin: auto 0;
+  margin-bottom: var(--space-1);
 }
 
 .card {
