fix: multichain sub itemstyles

--- a/src/components/welcome/MyAccounts/styles.module.css
+++ b/src/components/welcome/MyAccounts/styles.module.css
@@ -7,25 +7,24 @@
 
 .myAccounts {
   width: 100%;
-  max-width: 600px;
+  max-width: 750px;
   margin: var(--space-2);
 }
 
 .safeList {
-  padding: var(--space-3);
+  padding: var(--space-2);
   margin-bottom: var(--space-3);
-}
-
-.safeList :last-child {
-  margin-bottom: 0;
 }
 
 .header {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   padding: var(--space-3) 0;
   gap: var(--space-1);
+}
+
+.title {
+  flex-grow: 1;
 }
 
 .listItem {
@@ -80,8 +79,8 @@
 
 .safeLink {
   display: grid;
-  padding: var(--space-2) var(--space-6) var(--space-2) var(--space-2);
-  grid-template-columns: 60px 3fr 3fr minmax(auto, 2fr);
+  padding: var(--space-2) var(--space-1) var(--space-2) var(--space-2);
+  grid-template-columns: 60px 4fr 6fr minmax(auto, 1fr);
   align-items: center;
 }
 
@@ -101,7 +100,6 @@
 
 .listHeader {
   display: flex;
-  margin-bottom: var(--space-1);
 }
 
 .card {
@@ -170,25 +168,12 @@
   }
 }
 
-.safeList :global .MuiAccordionDetails-root {
-  padding: 0;
-}
-.safeList :global .MuiAccordion-root {
-  padding: 0;
-  border: none;
-}
-
 .safeList :global .MuiAccordionSummary-root {
   background: white !important;
   padding-left: 0;
   min-height: 0;
   justify-content: left;
   vertical-align: middle;
-}
-
-.safeList :global .MuiAccordionSummary-content {
-  margin: 0;
-  /* flex-grow: 0; */
 }
 
 @media (max-width: 599.95px) {
@@ -216,6 +201,10 @@
   .multiChains {
     justify-content: flex-start;
   }
+
+  .chainIndicator {
+    justify-content: flex-start;
+  }
 }
 
 @container my-accounts-container (max-width: 500px) {
@@ -224,7 +213,7 @@
   }
 
   .header {
-    padding: var(--space-3);
+    padding: var(--space-2);
     border-bottom: 1px solid var(--color-border-light);
   }
 
@@ -235,9 +224,5 @@
 
   .title {
     font-size: 20px;
-  }
-
-  .card {
-    border-top: 1px solid var(--color-border-light);
   }
 }
