chore: update to nextjs 15

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,6 @@
 @import url(./vars.css);
 @import url(./onboard.css);
-@import url(/fonts/fonts.css);
+@import url(/public/fonts/fonts.css);
 
 html,
 body {
