--- a/src/components/welcome/MyAccounts/styles.module.css
+++ b/src/components/welcome/MyAccounts/styles.module.css
@@ -56,6 +56,7 @@
 
 .listItem :global .MuiAccordion-root.Mui-expanded {
   background-color: var(--color-background-paper);
+  flex-grow: 1;
 }
 
 .listItem.subItem {
@@ -224,4 +225,22 @@
   .card {
     border-top: 1px solid var(--color-border-light);
   }
+}
+
+.safenet {
+  border: 1px solid var(--safenet, #32f970);
+  border-bottom-left-radius: var(--space-1);
+  border-bottom-right-radius: var(--space-1);
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  border-top-width: 0;
+}
+
+.safenetHeader {
+  background: linear-gradient(90deg, #32f970 0%, #eed509 100%);
+  border-top-left-radius: inherit;
+  border-top-right-radius: inherit;
+  padding: calc(var(--space-1) / 2) var(--space-1);
+  border-top-right-radius: var(--space-1);
+  border-top-left-radius: var(--space-1);
 }
