Refactor Sidebar Gradient Box
This PR refactors the sidebar to also use a gradient border. It pushes
the drawer button down to not cover Safe information.

--- a/src/components/welcome/MyAccounts/styles.module.css
+++ b/src/components/welcome/MyAccounts/styles.module.css
@@ -233,5 +233,6 @@
 
 .safenetListItem .listItem {
   border: none;
-  border-radius: 0;
+  border-radius-left-top: 0;
+  border-radius-right-top: 0;
 }
