Refactor Account Items to use Gradient Box (#4487)
* Refactor Account Items to use Gradient Box

This PR changes the account item list to use the `GradientBoxSafenet`
component so that the appearance is consistent:
- Icon size/colors are guaranteed to be the same
- uses gradient border

* Refactor Sidebar Gradient Box (#4491)

This PR refactors the sidebar to also use a gradient border. It pushes
the drawer button down to not cover Safe information.

* copy verification link to clipboard

--- a/src/components/welcome/MyAccounts/styles.module.css
+++ b/src/components/welcome/MyAccounts/styles.module.css
@@ -227,20 +227,12 @@
   }
 }
 
-.safenet {
-  border: 1px solid var(--safenet, #32f970);
-  border-bottom-left-radius: var(--space-1);
-  border-bottom-right-radius: var(--space-1);
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
-  border-top-width: 0;
+.safenetListItem {
+  margin-bottom: 12px;
 }
 
-.safenetHeader {
-  background: linear-gradient(90deg, #32f970 0%, #eed509 100%);
-  border-top-left-radius: inherit;
-  border-top-right-radius: inherit;
-  padding: calc(var(--space-1) / 2) var(--space-1);
-  border-top-right-radius: var(--space-1);
-  border-top-left-radius: var(--space-1);
+.safenetListItem .listItem {
+  border: none;
+  border-radius-left-top: 0;
+  border-radius-right-top: 0;
 }
