--- a/public/fonts/fonts.css
+++ b/public/fonts/fonts.css
@@ -2,6 +2,7 @@
   font-family: 'DM Sans';
   font-display: swap;
   font-weight: 400;
+  /** check that the font is loaded on the website. IDEs fail to find the file */
   src: url('/fonts/DMSansRegular.woff2') format('woff2');
 }
 
@@ -9,5 +10,6 @@
   font-family: 'DM Sans';
   font-display: swap;
   font-weight: bold;
+  /** check that the font is loaded on the website. IDEs fail to find the file */
   src: url('/fonts/DMSans700.woff2') format('woff2');
 }
