--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,11 +1,16 @@
 @import url(./vars.css);
 @import url(./onboard.css);
-/**
-* Some IDEs show this file as not existing, but it is.
-* If you modify this make sure that the file is also loaded on the
-* actual website
-*/
 @import url(/fonts/fonts.css);
+/**
+* ^^^^^^^
+* Some IDEs show the fonts file above as not existing, but it is.
+* If you modify the path to it make sure that the file is also loaded on the
+* actual website.
+* Fun fact: if this comment block is above the @import url(/fonts/fonts.css);
+* nextjs's build will incorrectly place the @import in the middle of the file
+* and the fonts won't load. More info on @import:
+* https://developer.mozilla.org/en-US/docs/Web/CSS/@import#description
+*/
 
 html,
 body {
